# er-triage-env

./: .gitignore  README.md  baseline_results.json  client.py  generate_cases.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  validate.sh
server/: Dockerfile  app.py  cases.json  environment.py
